<resources>
    <string name="app_name">Itinerary App</string>
    <string name="splash_screen">Splash Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_ticket_number">Enter your ticket Number :</string>
    <string name="number">Number :</string>
    <string name="totime">ToTime</string>
    <string name="fromtime">fromtime</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="arrival">Arrival</string>
    <string name="departure_time">Departure Time</string>
    <string name="departure">Departure</string>
    <string name="select_type_of_route">Select Type of route</string>
    <string name="done">Done</string>
    <string name="enter_your_info_number">Enter your info number</string>
    <string name="timings">Timings :</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_your_starting_date">Enter your Journey starting Date</string>
    <string name="enter_your_journey_end_date">Enter your Journey end Date</string>
</resources>
