<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".itinerydetails.view.FillDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/numberEdx"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_info_number"/>
        <EditText
            android:id="@+id/departureEdx"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/departure"/>
        <EditText
            android:id="@+id/arrivalEdx"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/arrival"/>

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timings"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fromTomeEdx"
                android:layout_weight="1"
                android:hint="@string/from"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/toTomeEdx"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:hint="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"/>
    </LinearLayout>



</RelativeLayout>